recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:4: error: illegal start of simple pattern
  for(var i = 0; i<4; i++) {
      ^FourSquare:4: error: '<-' expected but ';' found.
  for(var i = 0; i<4; i++) {
               ^FourSquare:4: error: '<-' expected but ';' found.
  for(var i = 0; i<4; i++) {
                    ^FourSquare:4: error: illegal start of simple pattern
  for(var i = 0; i<4; i++) {
                         ^FourSquare:9: error: illegal start of simple expression
}
^