recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run():Unit = {
  //Avance 90 Avance 90 Avance 90 Avance 180 Avance 90 Avance 90 Avance 90 Avance 180
  j=1;
  for(var i = 0; i<4; i++) {
	  avance(100);
  	droite(90+90*(4%j)); 
    j++;
  }  
}
